# internal/server/http.go
@@ -38,8 +38,5 @@ func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 
 // RegisterRoutes registers all HTTP routes
 func (s *Server) RegisterRoutes() {
-	s.Route("/groupbuy/activities", s.groupBuyHandler.GetAllActivities)
-	s.Route("/groupbuy/discounts", s.groupBuyHandler.GetAllDiscounts)
-	s.Route("/groupbuy/discount", s.groupBuyHandler.GetDiscountByID)
 	s.Route("/market/trial", s.groupBuyHandler.MarketTrial)
 }
